# impl_ptr

./: CMakeLists.txt  CMakeSettings.json
include/impl/: feature.hpp  impl.ipp  ptr.hpp  sfinae.hpp
test/: CMakeLists.txt
test/def_constructable/: impl.cpp  is_constructable.cpp
test/no_features/: impl.cpp  is_destructable.cpp  is_moveable.cpp  not_def_constructible.cpp
test/no_instantiations/: impl.cpp  is_compiling.cpp
